# STA5_pre

./: envsetup.sh
sources/gst-plugins-st/gst/fb/: Makefile.am  fbpool.c  fbpool.h  fbsink.c  fbsink.h
sources/gst-plugins-st/gst/gl/: Makefile.am  gstgl360view2d.c  gstgl360view2d.h  gstglcube.c  gstglcube.h  gstglstm.c  gstglvideomixer.c  gstglvideomixer.h
sources/gst-plugins-st/gst/kms/: Makefile.am  kmspool.c  kmspool.h  kmssink.c  kmssink.h
sources/gst-plugins-st/gst/v4l2dec/: Makefile.am  gstv4l2dec.c  gstv4l2dec.h  gstv4l2decbufferpool.c  gstv4l2decbufferpool.h
sources/gst-plugins-st/gst/v4l2enc/: Makefile.am  gstv4l2enc.c  gstv4l2enc.h  gstv4l2encbufferpool.c  gstv4l2encbufferpool.h
sources/gst-plugins-st/gst/v4l2trans/: Makefile.am  gstv4l2capbufpool.c  gstv4l2capbufpool.h  gstv4l2outbufpool.c  gstv4l2outbufpool.h  gstv4l2trans.c  gstv4l2trans.h
sources/gst-plugins-st/gst/videocrc/: Makefile.am  gstvideocrc.c  gstvideocrc.h
sources/gst-plugins-st/tools/gst-interactive/: Makefile.am  gst-interactive.1.in  gst-launch-interactive.c
sources/m3-loaders/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  PRJ_M3.IAD  PRJ_M3.IMD  PRJ_M3.PFI  PRJ_M3.PO  PRJ_M3.PR  PRJ_M3.WK3  build-ninja.sh  build.bat  build.sh
sources/m3-loaders/cmake/: Toolchain-gcc-arm-none-eabi.cmake
sources/m3-loaders/docs/: .gitignore  m3loader.doxyfile.in  mainpage.dox
sources/m3-loaders/docs/diagrams/: a5-cm3-ATF-M3XL_load_M3OS-boot-procedure.pu  a5-cm3-ATF-M3XL_load_M3OS-no_uboot-boot-procedure.pu  a5-cm3-ATF-boot-procedure.pu  a5-cm3-boot-procedure.pu  a5-cm3-ddr-init.pu  a5-cm3-flash-procedure.pu  a5-cm3-overview.pu  st_colors.pu
sources/m3-loaders/drivers/: CMakeLists.txt
sources/m3-loaders/drivers/ais3624dq/: CMakeLists.txt  ais3624dq.c  ais3624dq.h
sources/m3-loaders/drivers/can/: CMakeLists.txt  sta_can.c  sta_can.h  sta_can_irq.c  sta_can_irq.h  sta_can_p.h  sta_canif.c  sta_canif.h  sta_canif_cfg.h  sta_canif_types.h
sources/m3-loaders/drivers/ccc/: CMakeLists.txt  sta_ccc.c  sta_ccc.h  sta_ccc_helpers.c  sta_ccc_if.h  sta_ccc_osal.c  sta_ccc_osal.h  sta_ccc_plat.c  sta_ccc_plat.h  sta_ccc_types.h  sta_hash.c  sta_move.c  sta_mpaes.c  sta_pka.c  sta_pka.h  sta_pka_ecc.c  sta_pka_ecdsa.c  sta_pka_rsa.c  sta_trng.c
sources/m3-loaders/drivers/hsm/inc/: CSE_AES_API_sc.h  CSE_AES_HW_Modes.h  CSE_Constants.h  CSE_HAL.h  CSE_Key.h  CSE_Manager.h  CSE_RNG.h  CSE_cmd_param.h  CSE_ext_AES256.h  CSE_ext_ECC.h  CSE_ext_ECC_ECDH.h  CSE_ext_HMAC.h  CSE_ext_OTP.h  CSE_ext_RSA.h  CSE_ext_TLSv12_PRF.h  CSE_ext_extendKey.h  CSE_ext_hash.h  CSE_ext_manager.h  config.h  crypto_al.h  cse_client.h  cse_ext_tc3p_patch.h  cse_shared.h  cse_shared_event.h  cse_types.h  err_codes.h  os_hal.h  registers.h  serialprintf.h  she_registers.h
sources/m3-loaders/drivers/hsm/src/: CMakeLists.txt  CSE_AES_API_sc.c  CSE_AES_HW_Modes.c  CSE_HAL.c  CSE_Key.c  CSE_Manager.c  CSE_RNG.c  CSE_cmd_param.c  CSE_ext_AES256.c  CSE_ext_ECC.c  CSE_ext_ECC_ECDH.c  CSE_ext_ECC_ECIES.c  CSE_ext_HMAC.c  CSE_ext_OTP.c  CSE_ext_RSA.c  CSE_ext_TLSv12_PRF.c  CSE_ext_hash.c  CSE_ext_manager.c
sources/m3-loaders/drivers/lis3dsh/: CMakeLists.txt  lis3dsh.c  lis3dsh.h
sources/m3-loaders/drivers/sta_fwlib/inc/: cortexm3_macro.h  flash_cache.h  sdmmc.h  sta1385_ddr3_setting.h  sta1385_lpddr2_setting.h  sta1x95_ddr3_setting.h  sta_a7.h  sta_acc.h  sta_adc.h  sta_ahbapb.h  sta_ampli.h  sta_audio.h  sta_board_config.h  sta_cam.h  sta_cot.h  sta_crc.h  sta_cssmisc.h  sta_ddr.h  sta_ddr_sta1295_timing.h  sta_ddr_sta1385_timing.h  sta_dma.h  sta_dsp.h  sta_eft.h  sta_gpio.h  sta_hsem.h  sta_i2c.h  sta_it.h  sta_lcd.h  sta_lib.h  sta_lpddr2_sta1385_timing.h  sta_ltdc.h  sta_m3_irq.h  sta_m3ss_otp.h  sta_map.h  sta_math.h  sta_mbox.h  sta_mmci.h  sta_mscr.h  sta_msp.h  sta_mtu.h  (+28 more)
sources/m3-loaders/drivers/sta_fwlib/src/: CMakeLists.txt  flash_cache.c  mmc_transfer.s  nand_fast.s  sdmmc.c  sta1385_ddr3_ctl.c  sta1385_ddr3_publ.c  sta1385_ddr3_setting.c  sta1385_lpddr2_ctl.c  sta1385_lpddr2_publ.c  sta1385_lpddr2_setting.c  sta1x95_ddr3_ctl.c  sta1x95_ddr3_pub.c  sta1x95_ddr3_setting.c  sta_a7.c  sta_acc.c  sta_adc.c  sta_ahbapb.c  sta_ampli.c  sta_cam.c  sta_cot.c  sta_crc.c  sta_ddr.c  sta_dma.c  sta_dsp.c  sta_eft.c  sta_gpio.c  sta_hsem.c  sta_i2c.c  sta_lcd.c  sta_lib.c  sta_ltdc.c  sta_m3_irq.c  sta_m3ss_otp.c  sta_math.c  sta_mbox.c  sta_mmci.c  sta_msp.c  sta_mtu.c  sta_nand.c  (+24 more)
sources/m3-loaders/drivers/vpu/source/: dwl.c  (+2 more)
sources/m3-loaders/early_audio/: early  emerald-firmware.X0.noheader  emerald-firmware.X1.noheader  emerald-firmware.Y0.noheader  emerald-firmware.Y1.noheader
sources/m3-loaders/freeRTOS/Source/: CMakeLists.txt
sources/m3-loaders/include/: FreeRTOSConfig.h  debug_regs.h  printf-stdarg.h  rom_interface.h  shared_data.h  sta_common.h  sta_image.h  trace.h  utils.h
sources/m3-loaders/middleware/: CMakeLists.txt
sources/m3-loaders/platform/: CMakeLists.txt  sta1295_clk.h  sta1295_pinmux.h  sta1385_clk.h  sta1385_pinmux.h  sta_pinmux.c  sta_pinmux.h  sta_platform.c  sta_platform.h
sources/m3-loaders/services/inc/: audiolib.h  sta_can_test.h  sta_cli.h  sta_ks.h  sta_mm.h  sta_remote_gpio.h  sta_rotary.h  sta_rpmsg_audio.h  sta_rpmsg_mm.h  sta_rpmsg_rdm.h  sta_tuner.h
sources/m3-loaders/services/src/: CMakeLists.txt  ccc_tests_result.txt  sta_audio.c  sta_audio_test.c  sta_board_config.c  sta_can_test.c  sta_ccc_test.c  sta_cli.c  sta_cli_cmd.c  sta_ddr_cli_cmd.c  sta_hsm_test.c  sta_i2c_test.c  sta_ks.c  sta_mbox_test.c  sta_mm.c  sta_remote_gpio.c  sta_rotary.c  sta_rpmsg_audio.c  sta_rpmsg_mm.c  sta_rpmsg_rdm.c  sta_rpmsg_test.c  sta_rvc_test.c  sta_splash_animation.c  sta_sqi_nor_test.c  sta_tuner.c
sources/m3-loaders/src/: CMakeLists.txt  debug_regs.c  freeRTOS_stubs.c  init.c  m3_os.ld.E  m3_xl_uflashloader.ld.E  m3_xloader.ld.E  malloc_stubs.c  printf-stdarg.c  sta_car_radio.c  sta_common.c  sta_image.c  sta_m3_mini.c  sta_telematics.c  sta_xl_uflashloader.c  sta_xloader.c  startup.s  syscalls.c  trace.c
sources/m3-loaders/tools/ddr-config/: ADG_DDR3_config.ods  ADG_LPDDR2_config.ods
(+2629 files in other folders)
